--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "weather-front",
   "version": "0.1.0",
   "private": true,
+  "proxy": "https://www.metaweather.com",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
